--- a/server/package.json
+++ b/server/package.json
@@ -43,11 +43,12 @@
     "kue": "^0.11.6",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "mongoose": "^5.11.19",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^6.6.3",
     "systeminformation": "^4.32.0",
     "uuid": "^8.3.2",
-    "ws": "^7.4.1"
+    "ws": "^7.4.4"
   }
 }
