--- a/server/scripts/Dockerfile
+++ b/server/scripts/Dockerfile
@@ -5,10 +5,10 @@ ENV PORT=10002
 WORKDIR /src/heo
 
 # cache node_modules
-COPY package*.json ./
+COPY ../package*.json ./
 RUN npm install
 
-COPY . .
+COPY .. .
 
 RUN npm run build
 
