--- a/server/scripts/nginx.conf
+++ b/server/scripts/nginx.conf
@@ -5,11 +5,11 @@ map $http_upgrade $connection_upgrade {
 
 server {
   listen 80;
-  server_name heo.giayuh.com;
+  server_name heo-api.giayuh.com;
 
   location / {
     proxy_pass http://127.0.0.1:10002;
-    proxy_set_header Host heo.giayuh.com;
+    proxy_set_header Host heo-api.giayuh.com;
     proxy_redirect off;
   }
 
@@ -18,7 +18,7 @@ server {
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
-    proxy_set_header Host heo.giayuh.com;
+    proxy_set_header Host heo-api.giayuh.com;
     proxy_redirect off;
   }
 }
