init express & ws , config deploy

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "env-cmd -f ./env/dev.env nodemon",
-    "prod": "env-cmd -f ./env/prod.env ./dist",
+    "prod": "env-cmd -f ./env/prod.env node ./dist/index.js",
     "build": "rimraf ./dist && tsc"
   },
   "keywords": [],
