--- a/tools/proxy-capture/docker-compose.yml
+++ b/tools/proxy-capture/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   app:
     image: zayuh/proxy_capture:lasted
+    user: "1000:983"
     ports:
       - "10001:10001"
     restart: always
