--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^14.14.27",
     "@types/validator": "^13.1.3",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -37,10 +38,12 @@
     "kue": "^0.11.6",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.19",
+    "mongoose": "^5.11.15",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^6.6.3",
+    "swagger-jsdoc": "^7.0.0-rc.5",
+    "swagger-ui-express": "^4.1.6",
     "systeminformation": "^4.32.0",
     "uuid": "^8.3.2",
     "ws": "^7.4.4"
