upgrade version & can forward port redis

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - mongodb
 
   redis:
-    image: redis:5-alpine
+    image: redis:6.2.1
     user: "1000:983"
-    ports:
-      - "10003:6379"
+    # ports:
+    #   - "10003:6379"
     command: ["--requirepass", "Duan2.2ti!"]
     volumes:
       - "~/data/.docker/data/redis:/data"
@@ -23,7 +23,7 @@ services:
     restart: always
 
   mongodb:
-    image: mongo:4.2
+    image: mongo:4.4.4
     user: "1000:983"
     environment:
       MONGO_INITDB_ROOT_USERNAME: heo
