--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "dev": "env-cmd -f ./env/dev.env nodemon",
     "prod": "env-cmd -f ./env/prod.env node ./dist/index.js",
+    "worker": "echo 'need update!'",
     "build": "rimraf ./dist && tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bull": "^3.15.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "@types/request": "^2.48.5",
     "@types/socket.io": "^2.1.12",
     "@types/uuid": "^8.3.0",
@@ -31,14 +36,23 @@
     "@types/validator": "^13.1.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bull-board": "^1.4.2",
+    "bullmq": "^1.14.8",
     "child_process": "^1.0.2",
+    "connect-mongo": "^4.4.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "kue": "^0.11.6",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^6.6.3",
