--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "env-cmd -f ./env/dev.env nodemon",
     "prod": "env-cmd -f ./env/prod.env node ./dist/index.js",
     "worker": "echo 'need update!'",
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && tsc",
+    "postbuild": "copyfiles -u 1 src/**/*.ejs dist"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@types/socket.io": "^2.1.12",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
+    "copyfiles": "^2.4.1",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
@@ -35,6 +37,7 @@
     "@types/node": "^14.14.27",
     "@types/validator": "^13.1.3",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bull-board": "^1.4.2",
     "bullmq": "^1.14.8",
