--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "bull-board": "^1.4.2",
     "bullmq": "^1.14.8",
     "child_process": "^1.0.2",
+    "connect": "^3.7.0",
     "connect-mongo": "^4.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -50,6 +51,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
