--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@types/node": "^14.14.27",
     "@types/validator": "^13.1.3",
+    "avl": "^1.4.4",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
