--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/lodash": "^4.14.165",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
+    "@types/proxy-lists": "^1.14.1",
     "@types/request": "^2.48.5",
     "@types/socket.io": "^2.1.12",
     "@types/uuid": "^8.3.0",
@@ -60,6 +61,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "proxy-lists": "^1.23.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^6.6.3",
