--- a/tools/proxy-capture/package.json
+++ b/tools/proxy-capture/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "avl": "^1.4.4",
     "http-proxy": "^1.18.1",
     "request": "^2.88.2"
   }
