--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "devprod": "env-cmd -f ./env/dev.env node ./dist/index.js",
     "worker": "echo 'need update!'",
     "build": "rimraf ./dist && tsc",
-    "postbuild": "copyfiles -u 1 src/**/*.ejs dist"
+    "postbuild": "copyfiles -u 1 src/**/*.ejs dist -V"
   },
   "keywords": [],
   "author": "",
@@ -29,12 +29,11 @@
     "@types/socket.io": "^2.1.12",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
-    "copyfiles": "^2.4.1",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@types/node": "^14.14.27",
@@ -49,6 +48,7 @@
     "connect": "^3.7.0",
     "connect-mongo": "^4.4.0",
     "cookie-parser": "^1.4.5",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
