--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "devprod": "env-cmd -f ./env/dev.env node ./dist/index.js",
     "worker": "echo 'need update!'",
     "build": "rimraf ./dist && tsc",
-    "postbuild": "copyfiles -u 1 src/**/*.ejs dist -V"
+    "postbuild": "copyfiles -u 1 \"src/**/*.ejs\" dist -V"
   },
   "keywords": [],
   "author": "",
