--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proccess",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -57,6 +57,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "express-winston": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -71,6 +72,8 @@
     "swagger-ui-express": "^4.1.6",
     "systeminformation": "^4.32.0",
     "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.7",
     "ws": "^7.4.4"
   }
 }
