--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@types/proxy-lists": "^1.14.1",
     "@types/request": "^2.48.5",
     "@types/socket.io": "^2.1.12",
+    "@types/url-join": "^4.0.0",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "env-cmd": "^10.1.0",
@@ -71,6 +72,7 @@
     "swagger-jsdoc": "^7.0.0-rc.5",
     "swagger-ui-express": "^4.1.6",
     "systeminformation": "^4.32.0",
+    "url-join": "^4.0.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.7",
