--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
+    "@types/express-flash": "0.0.2",
     "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
@@ -56,9 +57,11 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "express-winston": "^4.1.0",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
