--- a/tools/proxy-capture/package.json
+++ b/tools/proxy-capture/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "avl": "^1.4.4",
     "http-proxy": "^1.18.1",
+    "node-gzip": "^1.1.2",
     "request": "^2.88.2"
   }
 }
