--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "express-winston": "^4.1.0",
+    "generate-password": "^1.6.0",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
