add magic tree auto shoot & alert message

--- a/server/env/dev.env
+++ b/server/env/dev.env
@@ -1,7 +1,7 @@
 NODE_ENV=DEVELOPMENT
 
 PORT=10002
-ENDPOINT=localhost:10002
+ENDPOINT=http://localhost:10002
 AUTH_KEY=helloworld
 
 MONGO_URI=mongodb://localhost:27017/heo
