--- a/server/env/prod.env
+++ b/server/env/prod.env
@@ -1,7 +1,7 @@
 NODE_ENV=PRODUCTION
 
 PORT=10002
-ENDPOINT=heo-api.giayuh.com
+ENDPOINT=https://heoapi.giayuh.com
 AUTH_KEY=helloworld
 
 MONGO_URI=mongodb://heo:Duan2.22ti!@mongodb:27017/heo?authSource=admin
