add base ws proxy

--- a/proxy_server/env/dev.env
+++ b/proxy_server/env/dev.env
@@ -2,4 +2,6 @@ NODE_ENV=DEVELOPMENT
 
 PORT=10001
 HOST_MGMT=http://localhost:10002
-WS_MGMT=ws://localhost:10002/ws_admin
+WS_MGMT=ws://localhost:10002/ws_proxy
+
+SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
