--- a/proxy_server/env/prod.env
+++ b/proxy_server/env/prod.env
@@ -2,4 +2,6 @@ NODE_ENV=PRODUCTION
 
 PORT=10001
 HOST_MGMT=https://heoapi.giayuh.com
-WS_MGMT=wss://heoapi.giayuh.com/ws_admin
+WS_MGMT=wss://heoapi.giayuh.com/ws_proxy
+
+SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
