--- a/server/env/dev.env
+++ b/server/env/dev.env
@@ -8,6 +8,7 @@ MONGO_URI=mongodb://localhost:27017/heo
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
+SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
 SOCKET_JWT_SECRET=keynaydelam.!!
 SOCKET=ws://127.0.0.1:10002
 
