--- a/server/env/prod.env
+++ b/server/env/prod.env
@@ -9,6 +9,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PWD=Duan2.22ti!
 
+SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
 SOCKET_JWT_SECRET=keynaydelam.!!
 SOCKET=wss://heoapi.giayuh.com
 
