--- a/proxy_server/package.json
+++ b/proxy_server/package.json
@@ -26,10 +26,11 @@
   "dependencies": {
     "avl": "^1.4.4",
     "http-proxy": "^1.18.1",
-    "node-gzip": "^1.1.2",
-    "request": "^2.88.2",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "node-gzip": "^1.1.2",
+    "request": "^2.88.2",
+    "rxjs": "^6.6.7",
     "uuid": "^8.3.2",
     "ws": "^7.4.4"
   }
