--- a/proxy_server/package.json
+++ b/proxy_server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "env-cmd -f ./env/dev.env nodemon",
     "prod": "env-cmd -f ./env/prod.env node ./dist/index.js",
+    "heroku": "env-cmd -f ./env/heroku.env node ./dist/index.js",
     "build": "rimraf ./dist && tsc"
   },
   "author": "",
