--- a/proxy_server/package.json
+++ b/proxy_server/package.json
@@ -18,7 +18,6 @@
     "@types/request": "^2.48.5",
     "@types/validator": "^13.1.3",
     "@types/ws": "^7.4.0",
-    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
@@ -33,6 +32,7 @@
     "request": "^2.88.2",
     "rxjs": "^6.6.7",
     "uuid": "^8.3.2",
-    "ws": "^7.4.4"
+    "ws": "^7.4.4",
+    "env-cmd": "^10.1.0"
   }
 }
