--- a/proxy_server/package.json
+++ b/proxy_server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/http-proxy": "^1.17.5",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.27",
     "@types/node-gzip": "^1.1.0",
     "@types/request": "^2.48.5",
