realtime v1 proxy mgmt

--- a/server/env/dev.env
+++ b/server/env/dev.env
@@ -10,6 +10,6 @@ REDIS_PORT=6379
 
 SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
 SOCKET_JWT_SECRET=keynaydelam.!!
-SOCKET=ws://127.0.0.1:10002
+SOCKET=ws://localhost:10002
 
 MAIN_WORKER=true
