success fork turn_proxy repo to react

--- a/proxy_app/android/app/build.gradle
+++ b/proxy_app/android/app/build.gradle
@@ -131,11 +131,18 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.giayuh.heodenroi"
+        applicationId "com.giayuh_hdr"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++17 -fvisibility=hidden "
+                abiFilters 'armeabi-v7a','arm64-v8a', 'x86'
+                arguments "-DCMAKE_VERBOSE_MAKEFILE=1 -DANDROID_FUNCTION_LEVEL_LINKING=ON"
+            }
+        }
     }
     splits {
         abi {
@@ -165,6 +172,14 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    
+    externalNativeBuild {
+        cmake {
+            path file('CMakeLists.txt')
+        }
+    }
+
+    ndkVersion = '21.0.6113669'
 
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
