--- a/proxy_app/android/app/src/main/AndroidManifest.xml
+++ b/proxy_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.giayuh.heodenroi">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.giayuh_hdr">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
       android:name=".MainApplication"
@@ -21,5 +24,22 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <service
+        android:name=".service.Tun2HttpVpnService"
+        android:permission="android.permission.BIND_VPN_SERVICE"
+        tools:ignore="MissingClass">
+        <intent-filter>
+          <action android:name="android.net.VpnService" />
+        </intent-filter>
+      </service>
+
+      <receiver
+        android:name=".receiver.BootReceiver"
+        android:label="@string/app_name"
+        tools:ignore="MissingClass">
+        <intent-filter android:priority="999">
+          <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter>
+      </receiver>
     </application>
 </manifest>
