--- a/proxy_app/android/build.gradle
+++ b/proxy_app/android/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
-        ndkVersion = "20.1.5948944"
+        // ndkVersion = "20.1.5948944"
+        ndkVersion = '21.0.6113669'
     }
     repositories {
         google()
