change domain & new group docker

--- a/proxy_server/env/prod.env
+++ b/proxy_server/env/prod.env
@@ -1,7 +1,7 @@
 NODE_ENV=HEROKU
 
 PORT=10001
-HOST_MGMT=https://heoapi.giayuh.com
-WS_MGMT=wss://heoapi.giayuh.com/ws_proxy
+HOST_MGMT=https://heo.giayuh.com
+WS_MGMT=wss://heo.giayuh.com/ws_proxy
 
 SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
