--- a/server/env/prod.env
+++ b/server/env/prod.env
@@ -1,7 +1,7 @@
 NODE_ENV=PRODUCTION
 
 PORT=10002
-ENDPOINT=https://heoapi.giayuh.com
+ENDPOINT=https://heo.giayuh.com
 AUTH_KEY=helloworld
 
 MONGO_URI=mongodb://heo:Duan2.22ti!@mongodb:27017/heo?authSource=admin
@@ -11,6 +11,6 @@ REDIS_PWD=Duan2.22ti!
 
 SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
 SOCKET_JWT_SECRET=keynaydelam.!!
-SOCKET=wss://heoapi.giayuh.com
+SOCKET=wss://heo.giayuh.com
 
 MAIN_WORKER=true
