--- a/proxy_server/env/heroku.env
+++ b/proxy_server/env/heroku.env
@@ -1,6 +1,6 @@
 NODE_ENV=HEROKU
 
-HOST_MGMT=https://heoapi.giayuh.com
-WS_MGMT=wss://heoapi.giayuh.com/ws_proxy
+HOST_MGMT=https://heo.giayuh.com
+WS_MGMT=wss://heo.giayuh.com/ws_proxy
 
 SOCKET_PROXY_TOKEN=vEZtEn4Pd1duk7DzB14Nc4EgFbctjJYpnsy5l1C4Z
