--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
+    "@types/multer": "^1.4.5",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
     "@types/proxy-lists": "^1.14.1",
@@ -67,6 +68,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
